Updates from Overleaf

--- a/chap1-introduction.tex
+++ b/chap1-introduction.tex
@@ -4,3 +4,5 @@
 %% Restart the numbering to make sure that this is definitely page #1!
 \pagenumbering{arabic}
 
+
+\textcolor{red}{NEED TO DOUBLE CAPTION ALL FIGURES (AND TABLES?) LIKE /CAPTION[SHORT CAPTION]{NORMAL CAPTION}. THE SHORT CAPTION WILL BE WHAT IS IS SHOWN I THE FIGURE LIST.}
