--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -1,4 +1,4 @@
-\chapter{Motivaton for Steriles/Neutrino Physics}
+\chapter{Neutrino Physics}
 \label{chap:Neutrino Physics}
 \section{A Brief History of Neutrino Discoveries}
 \begin{itemize}
@@ -203,7 +203,7 @@ The nature of the neutrino hierarchy has major impacts on several areas. Within 
 \begin{figure}
     \centering
     \includegraphics[width = \largefigwidth]{figures-chap2/mass_hierarchy.jpg}
-    \caption{Diagrammatic representation of the normal hierarchy (left) and the inverted hierarchy (right). The flavour contributions to each mass state are illustrated by the different colours.}
+    \caption[Neutrino hierarchy.]{Diagrammatic representation of the normal hierarchy (left) and the inverted hierarchy (right). The flavour contributions to each mass state are illustrated by the different colours.}
     \label{fig:my_label}
 \end{figure}
 
@@ -218,7 +218,7 @@ $\Delta m^2_{21}$   & \multicolumn{1}{l|}{$(7.53\pm0.18) \times 10^{-5} eV^2$}  
 $\Delta m^2_{32}$   & \multicolumn{1}{l|}{$(2.453\pm0.033) \times 10^{-3} eV^2$} & $(-2.536 \pm 0.034) \times 10^{-3} eV^2$ \\
 $\delta_{CP}$       & \multicolumn{1}{l|}{$1.36^{+0.20}_{-0.16} \pi$ rad}                         &  \multicolumn{1}{l}{$1.36^{+0.20}_{-0.16} \pi$ rad} \\  
 \end{tabular}
-\caption{The best fit values for 3-flavour neutrino oscillation parameters from the 2020 \gls{pdg} \cite{PDG_2020}.}
+\caption[3-flavour neutrino best fit values.]{The best fit values for 3-flavour neutrino oscillation parameters from the 2020 \gls{pdg} \cite{PDG_2020}.}
 \label{table:Best fit params}
 \end{table}
 
@@ -242,7 +242,7 @@ The \gls{lsnd} experiment involved a close to 800 MeV proton beam which produced
 \begin{figure}[h]
     \centering
     \includegraphics[width = \largefigwidth]{figures-chap2/LSND_excess.png}
-    \caption{The \gls{lsnd} excess as a function of the neutrino L/E value. Events require a positron in the energy range $20 < E < 60$ MeV and a likelihood ratio of > 10 that the associated gamma was correlated (i.e. $\frac{\mathcal{L}_{\gamma}(correlated)}{\mathcal{L}_{\gamma}(accidental)} > 10$). \cite{LSND_excess}}
+    \caption[LSND excsess.]{The \gls{lsnd} excess as a function of the neutrino L/E value. Events require a positron in the energy range $20 < E < 60$ MeV and a likelihood ratio of > 10 that the associated gamma was correlated (i.e. $\frac{\mathcal{L}_{\gamma}(correlated)}{\mathcal{L}_{\gamma}(accidental)} > 10$). \cite{LSND_excess}}
     \label{fig:LSND excess}
 \end{figure}
 \newpage
@@ -252,7 +252,7 @@ The \gls{miniboone} collected data from the \gls{bnb} operating in both neutrino
 \begin{figure}[h]
     \centering
     \includegraphics[width = \largefigwidth]{figures-chap2/MiniBooNE_excess.png}
-    \caption{The MiniBooNE excess from \nue CCQE events. The best fit line assumed two neutrino oscillations \cite{MiniBooNE_excess}.}
+    \caption[MiniBooNE excess.]{The MiniBooNE excess from \nue CCQE events. The best fit line assumed two neutrino oscillations \cite{MiniBooNE_excess}.}
     \label{fig:MiniBooNE excess}
 \end{figure}
 \newpage
@@ -348,7 +348,7 @@ Within a (3 + 1) framework and assuming that $\Delta m^2_{41} \gg |\Delta m^2_{3
 
 \begin{equation}
     P_{\nu_\alpha \rightarrow \nu_\beta} = \Kronecker_{\alpha \beta} -4|U_{\alpha \beta}|^2 (\Kronecker_{\alpha \beta} -|U_{\alpha \beta}|^2)sin^2(\frac{\Delta m^2_{41}L}{4E})
-\end{equation}
+\end{equation}\label{eqn:sterile_osc_prob}
 
 \begin{equation}
     sin^22\thetamumu &\isdefinedas 4|U_{\mu 4}|^2(1 - |U_{\mu 4}|^2) \\
@@ -360,6 +360,18 @@ Note that \nue appearance depends on $U_{\mu 4}$ and $U_{e4}$ - this allows thes
 
 \textcolor{red}{SOME GLOBAL OVERVIEW OF STERILE NEUTRINOS??}
 
+\begin{table}[h!]
+\begin{tabular}{c cc}
+Oscillation Parameter        & \begin{tabular}[c]{@{}c@{}} Best Fit Value\end{tabular} \\ \hline
+
+$sin^22\theta_{\mu\mu}$ & 0.07157      \\
+$sin^22\theta_{\mu e}$ & 0.0009809      \\
+$sin^22\theta_{ee}$ & 0.05310      \\
+$\Delta m^2_{41}$ & 1.32      \\
+
+\end{tabular}
+\caption[Best fit value for sterile oscillation parameters]{The global best fit values for the (3 + 1) sterile neutrino oscillation parameters. \cite{Where_are_we_with_light_sterile_neutrinos}}
+\end{table}\label{}
 
 %\begin{fmffile}{diagram}
 %\begin{fmfgraph*}(200,150)
