--- a/glossary.tex
+++ b/glossary.tex
@@ -27,6 +27,7 @@
 \newacronym{lep}{LEP}{Large Electron-Positron Collider}
 \newacronym{lsnd}{LSND}{Liquid Scintillator Neutrino Detector}
 \newacronym{mc}{MC}{Monte Carlo}
+\newacronym{mct}{MCT}{Monte Carlo Template}
 \newacronym{microboone}{MicroBooNE}{Micro Booster Neutrino Experiment}
 \newacronym{miniboone}{MiniBooNE}{Mini Booster Neutrino Experiment}
 \newacronym{minos}{MINOS}{Main Injector Neutrino Oscillation Search}
