--- a/mythesis.bib
+++ b/mythesis.bib
@@ -460,6 +460,28 @@ url="https://doi.org/10.1007/978-3-030-23509-3_11"
    pages={1–30}
 }
 
+@article{Where_are_we_with_light_sterile_neutrinos,
+	doi = {10.1016/j.physrep.2020.08.005},
+  
+	url = {https://doi.org/10.1016%2Fj.physrep.2020.08.005},
+  
+	year = 2020,
+	month = {nov},
+  
+	publisher = {Elsevier {BV}
+},
+  
+	volume = {884},
+  
+	pages = {1--59},
+  
+	author = {A. Diaz and C.A. Argüelles and G.H. Collin and J.M. Conrad and M.H. Shaevitz},
+  
+	title = {Where are we with light sterile neutrinos?},
+  
+	journal = {Physics Reports}
+}
+
 %%%%%%%%%%%%%%%%%
 % SBN Programme %
 %%%%%%%%%%%%%%%%%
@@ -488,6 +510,27 @@ doi = {10.1088/1748-0221/12/02/P02017}
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevD.79.072002},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.79.072002}
+}
+
+@article{BNB_flux_TN,
+title = {Booster Neutrino Flux Prediction at MicroBooNE},
+author = {None, None},
+abstractNote = {The primary source of neutrinos for the MicroBooNE experiment is Fermilab’s Booster Neutrino Beamline. The beamline uses 8 GeV protons from the Booster accelerator steered onto a beryllium target. The secondaries are focused by a magnetic horn down a 50m long decay pipe. Decays of these secondaries give rise to a neutrino beam. We use the beamline simulation and techniques previously developed by the MiniBooNE collaboration to calculate the neutrino flux and estimate systematic uncertainties at the MicroBooNE detector location.},
+doi = {10.2172/1573216},
+url = {https://www.osti.gov/biblio/1573216}, 
+journal = {},
+place = {United States},
+year = {2018},
+month = {7}
+} 
+
+@misc{GENIE_manual,
+      title={The GENIE Neutrino Monte Carlo Generator: Physics and User Manual}, 
+      author={Costas Andreopoulos and Christopher Barry and Steve Dytman and Hugh Gallagher and Tomasz Golan and Robert Hatcher and Gabriel Perdue and Julia Yarba},
+      year={2015},
+      eprint={1510.05494},
+      archivePrefix={arXiv},
+      primaryClass={hep-ph}
 }
 
 @article{LArTPC_proposal,
@@ -558,6 +601,15 @@ title = {Review of Liquid Argon Detector Technologies in the Neutrino Sector},
 volume = {11},
 journal = {Applied Sciences},
 doi = {10.3390/app11062455}
+}
+
+@misc{sbnd_crt,
+      title={A Novel Cosmic Ray Tagger System for Liquid Argon TPC Neutrino Detectors}, 
+      author={M. Auger and M. Del Tutto and A. Ereditato and B. Fleming and D. Goeldi and E. Gramellini and R. Guenette and W. Ketchum and I. Kreslo and A. Laube and D. Lorca and M. Luethi and C. Rudolf von Rohr and J. R. Sinclair and S. R. Soleti and M. Weber},
+      year={2016},
+      eprint={1612.04614},
+      archivePrefix={arXiv},
+      primaryClass={physics.ins-det}
 }
 
 @article{ARAPUCA,
