Updates from Overleaf

--- a/chap5-oscillation_inputs.tex
+++ b/chap5-oscillation_inputs.tex
@@ -392,3 +392,9 @@ The $\nu_e$ edge-to-edge binning has 33 bins in true neutrino energy which are b
 \end{itemize}
 
 
+\begin{figure}
+    \centering
+    \includegraphics{figures-chap5/tweak}
+    \caption{Caption}
+    \label{fig:my_label}
+\end{figure}
