Updates from Overleaf

--- a/appendices.tex
+++ b/appendices.tex
@@ -5,5 +5,43 @@
 
 \chapter{Some more stuff}
 
+\def\proposalxsec{
+genie_ccresAxial_Genie,genie_ncresAxial_Genie,genie_qema_Genie,genie_NC_Genie,genie_NonResRvpCC1pi_Genie,genie_NonResRvnCC1pi_Genie,genie_NonResRvbarnCC1pi_Genie,genie_NonResRvbarpCC1pi_Genie,genie_NonResRvpCC2pi_Genie,genie_NonResRvnCC2pi_Genie,genie_NonResRvbarnCC2pi_Genie,genie_NonResRvbarpCC2pi_Genie,genie_NonResRvpNC1pi_Genie,genie_NonResRvnNC1pi_Genie,genie_NonResRvbarnNC1pi_Genie,genie_NonResRvbarpNC1pi_Genie,genie_NonResRvpNC2pi_Genie,genie_NonResRvnNC2pi_Genie,genie_NonResRvbarnNC2pi_Genie,genie_NonResRvbarpNC2pi_Genie}
+
+\def\modernxsec {genie_DISAth_Genie,genie_DISBth_Genie,genie_DISCv1u_Genie,genie_DISCv2u_Genie,genie_IntraNukeNabs_Genie,genie_IntraNukeNcex_Genie,genie_IntraNukeNinel_Genie,genie_IntraNukeNmfp_Genie,genie_IntraNukeNpi_Genie,genie_IntraNukePIabs_Genie,genie_IntraNukePIcex_Genie,genie_IntraNukePIinel_Genie,genie_IntraNukePImfp_Genie,genie_IntraNukePIpi_Genie,genie_ResDecayGamma_Genie,genie_ccresVector_Genie,genie_cohMA_Genie,genie_cohR0_Genie,genie_ncelAxial_Genie,genie_ncelEta_Genie,genie_ncresVector_Genie}
+
+
+\def\uncorrflux  {horncurrent_FluxUnisim,expskin_FluxUnisim,nucleoninexsec_FluxUnisim,nucleontotxsec_FluxUnisim,nucleonqexsec_FluxUnisim,pioninexsec_FluxUnisim, piontotxsec_FluxUnisim,pionqexsec_FluxUnisim}
+
+
+\begin{figure}
+\centering
+\foreach \x in \uncorrflux{
+\begin{subfigure}[p]{0.23\textwidth}
+    \includegraphics[width =\textwidth]{figures-chap5/tweak_nsigma_nue/\x_nuelikeCChigh_3sigma_\x.png}
+\end{subfigure}
+}
+\caption{A comparison of the +3\sigma variations from the response functions used by VALOR and the universes for the complete set of uncorrelated flux systematic parameters.}
+\end{figure}
+
+\begin{figure}
+\centering
+\foreach \x in \proposalxsec{
+\begin{subfigure}[p]{0.23\textwidth}
+    \includegraphics[width =\textwidth]{figures-chap5/tweak_nsigma_nue/\x_nuelikeCChigh_3sigma_\x.png}
+\end{subfigure}
+}
+\caption{A comparison of the +3\sigma variations from the response functions used by VALOR and the universes for the complete set of proposal cross-section systematic parameters.}
+\end{figure}
+
+\begin{figure}
+\centering
+\foreach \x in \modernxsec{
+\begin{subfigure}[p]{0.23\textwidth}
+    \includegraphics[width =\textwidth]{figures-chap5/tweak_nsigma_nue/\x_nuelikeCChigh_3sigma_\x.png}
+\end{subfigure}
+}
+\caption{A comparison of the +3\sigma variations from the response functions used by VALOR and the universes for the complete set of modern cross-section systematic parameters.}
+\end{figure}
 %% Big appendixes should be split off into separate files, just like chapters
 %\input{app-myreallybigappendix}
