--- a/preamble.tex
+++ b/preamble.tex
@@ -1,6 +1,6 @@
 \usepackage{xspace}
 \usepackage{tikz}
-\usepackage{morefloats,subfig,afterpage}
+\usepackage{morefloats,afterpage}
 \usepackage{mathrsfs} % script font
 \usepackage{verbatim}
 \usepackage{multirow}
@@ -8,6 +8,7 @@
 \usepackage{feynmf} % feynman diagrams
 \usepackage{adjustbox}
 \usepackage{arydshln}
+\usepackage{subcaption}
 
 \usepackage[a4paper,
             left=40mm,
