--- a/chap5-oscillation_inputs.tex
+++ b/chap5-oscillation_inputs.tex
@@ -174,6 +174,19 @@ Link in with Energy Reco. section
   \label{}
 \end{table}
 
+\begin{figure}
+    \centering
+    \includegraphics[width = \largefigwidth]{figures-chap5/tweak_nsigma_nue/horncurrent_FluxUnisim_nuelikeCChigh_1sigma_horncurrent_FluxUnisim.png}
+    \caption[+1$\sigma$ variation comparison for the horncurrent\_FluxUnisim parameter.]{A comparison of the +1$\sigma$ variation from the response functions in VALOR and the universes for the 'horncurrent\_FluxUnisim' flux systematic parameter.}
+    \label{fig:my_label}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width = \largefigwidth]{figures-chap5/tweak_pdf_N_nue/universe_valor_double_ratios_SBND_flux_uncorr.pdf}
+    \caption{Caption}
+    \label{fig:my_label}
+\end{figure}
 
 \section{Interaction Systematics}
 
@@ -303,6 +316,33 @@ Link in with Energy Reco. section
     \label{}
 \end{table}
 
+\begin{figure}
+    \centering
+    \includegraphics[width = \largefigwidth]{figures-chap5/tweak_nsigma_nue/genie_ccresAxial_Genie_nuelikeCChigh_1sigma_genie_ccresAxial_Genie.png}
+    \caption[+1$\sigma$ variation comparison for the genie\_ccresAxial\_Genie parameter.]{A comparison of the +1$\sigma$ variation from the response functions in VALOR and the universes for the 'genie\_ccresAxial\_Genie' proposal interaction systematic parameter.}
+    \label{fig:my_label}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width = \largefigwidth]{figures-chap5/tweak_pdf_N_nue/universe_valor_double_ratios_SBND_proposal_xsec.pdf}
+    \caption{Caption}
+    \label{fig:my_label}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width = \largefigwidth]{figures-chap5/tweak_nsigma_nue/genie_ResDecayGamma_Genie_nuelikeCChigh_1sigma_genie_ResDecayGamma_Genie.png}
+    \caption[+1$\sigma$ variation comparison for the genie\_ResDecayGamma\_Genie parameter.]{A comparison of the +1$\sigma$ variation from the response functions in VALOR and the universes for the 'genie\_ResDecayGamma\_Genie' modern interaction systematic parameter.}
+    \label{fig:my_label}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width = \largefigwidth]{figures-chap5/tweak_pdf_N_nue/universe_valor_double_ratios_SBND_modern_xsec.pdf}
+    \caption{Caption}
+    \label{fig:my_label}
+\end{figure}
 
 \section{Other Systematics}
 MEC, POT, Detector, Energy scale - maybe put some of these in above sections.
@@ -391,10 +431,3 @@ The $\nu_e$ edge-to-edge binning has 33 bins in true neutrino energy which are b
     \item 1 bin from 5.00-10.00 GeV.
 \end{itemize}
 
-
-\begin{figure}
-    \centering
-    \includegraphics{figures-chap5/tweak}
-    \caption{Caption}
-    \label{fig:my_label}
-\end{figure}
